(library
 (name prioritizer)
 (foreign_archives foo)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name libfoo)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I headers)
    (c_library_flags :standard)))
  (headers
   (include "foo.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(foreign_library
 (archive_name foo)
 (language c)
 (names foo)
 (include_dirs headers))
